--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
   <meta name="description"
     content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js">
 
+
+  <!-- OGP -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Gabriel Martinez. Full Stack Web Developer">
   <meta property="og:description" content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js 
   #FullStackDevelepors #DesarrolladorWeb #developers">
-
   <meta property="og:url" content="URL_DEL_PORTAFOLIO">
   <meta property="og:image" content="URL_DE_LA_IMAGEN">
 
