--- a/index.html
+++ b/index.html
@@ -26,11 +26,26 @@
   <meta property="og:url" content="URL_DEL_PORTAFOLIO">
   <meta property="og:image" content="URL_DE_LA_IMAGEN">
 
+  <!-- font family -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
+
+  <!-- icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 
 </head>
 
 <body>
+  <span class="material-symbols-outlined">
+    home
+  </span>
 
+  <span class="material-symbols-outlined">
+    check
+  </span>
 </body>
 
 </html>
