--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
 
 
   <meta name="author" content="Gabriel Martinez">
-
   <meta name="description"
     content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js">
 
   <!-- Open Grap Protocol ( OGP) , es un conjunnto de etiquetas que nos permiten controlar mejor como compartimos nuestras paginas en redes sociales -->
-
   <meta property="og:type" content="website">
   <meta property="og:title" content="Gabriel Martinez. Full Stack Web Developer">
-  <meta property="og:description" content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js 
-  #FullStackDevelepors #DesarrolladorWeb #developers">
-
+  <meta property="og:description"
+    content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js #FullStackDevelopers #DesarrolladorWeb #developers">
   <meta property="og:url" content="URL_DEL_PORTAFOLIO">
   <meta property="og:image" content="URL_DE_LA_IMAGEN">
 
