--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 
   <!-- stylesheet -->
   <link rel="stylesheet" href="./assets/css/style.css">
-
+  <link rel="stylesheet" href="./assets/css/header.css">
 
   <meta name="author" content="Gabriel Martinez">
   <meta name="description"
     content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js">
+
+  <meta name="keywords"
+    content="Full Stack Developer, Desarrollador Full Stack,JavaScript, CSS,HTML, REACT,GIT, Node.js, Express, SQL, Postgres, programodor con experiencia, web Developer">
 
   <!-- Open Grap Protocol ( OGP) , es un conjunnto de etiquetas que nos permiten controlar mejor como compartimos nuestras paginas en redes sociales -->
   <meta property="og:type" content="website">
@@ -35,14 +38,36 @@
 
 </head>
 
-<body>
-  <span class="material-symbols-outlined">
-    home
-  </span>
+<body class="body body--ligth body--dark">
 
-  <span class="material-symbols-outlined">
-    check
-  </span>
+  <header class="header">
+    <h1 class="header__h1">Gabriel Martinez</h1>
+    <h2 class="header__h2">Desarrollador web Full Stack</h2>
+
+    <div class="div--contact">
+      <a href="contactMe" class="div__a">
+        Contactame
+        <span class="material-symbols-outlined">
+          arrow_forward_ios
+        </span>
+      </a>
+      <a class="div__a" download href="./assets/cv/cv_es.png">Descargar</a>
+    </div>
+
+    <div class="morph"></div>
+
+  </header>
+
+
+
 </body>
 
 </html>
+
+<!-- metologia BEM
+
+B:BLOQUE
+E:ELEMENTO
+M:MODIFICADOR
+
+-->
