--- a/index.html
+++ b/index.html
@@ -1,73 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portafolio - Luis Fernando Solano Mejía</title>
+    <link rel="shortcut icon" href="./assets/img/portafolio.png" type="image/x-icon" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gabriel Martinez</title>
-  <link rel="shortcut icon" href="./assets/img/portafolio.png" type="image/x-icon">
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/header.css" />
 
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="./assets/css/header.css">
+    <meta name="author" content="Luis Solano" />
+    <meta name="description" content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js" />
 
-  <meta name="author" content="Gabriel Martinez">
-  <meta name="description"
-    content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js">
+    <meta name="keywords" content="Full Stack Developer, Desarrollador Full Stack,JavaScript, CSS,HTML, REACT,GIT, Node.js, Express, SQL, Postgres, programodor con experiencia, web Developer" />
 
-  <meta name="keywords"
-    content="Full Stack Developer, Desarrollador Full Stack,JavaScript, CSS,HTML, REACT,GIT, Node.js, Express, SQL, Postgres, programodor con experiencia, web Developer">
+    <!-- Open Grap Protocol ( OGP) , es un conjunnto de etiquetas que nos permiten controlar mejor como compartimos nuestras paginas en redes sociales -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Luis Solano. Full Stack Web Developer" />
+    <meta property="og:description" content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js #FullStackDevelopers #DesarrolladorWeb #developers" />
+    <meta property="og:url" content="URL_DEL_PORTAFOLIO" />
+    <meta property="og:image" content="URL_DE_LA_IMAGEN" />
 
-  <!-- Open Grap Protocol ( OGP) , es un conjunnto de etiquetas que nos permiten controlar mejor como compartimos nuestras paginas en redes sociales -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Gabriel Martinez. Full Stack Web Developer">
-  <meta property="og:description"
-    content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js #FullStackDevelopers #DesarrolladorWeb #developers">
-  <meta property="og:url" content="URL_DEL_PORTAFOLIO">
-  <meta property="og:image" content="URL_DE_LA_IMAGEN">
+    <!-- font family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet" />
 
-  <!-- font family -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&display=swap" rel="stylesheet">
+    <!-- icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  </head>
 
-  <!-- icons -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-
-</head>
-
-<body class="body body--ligth body--dark">
-
-  <header class="header">
-    <h1 class="header__h1">Gabriel Martinez</h1>
-    <h2 class="header__h2">Desarrollador web Full Stack</h2>
-
-    <div class="div--contact">
-      <a href="contactMe" class="div__a">
-        Contactame
-        <span class="material-symbols-outlined">
-          arrow_forward_ios
-        </span>
-      </a>
-      <a class="div__a" download href="./assets/cv/cv_es.png">Descargar</a>
-    </div>
-
-    <div class="morph"></div>
-
-  </header>
-
-
-
-</body>
-
+  <body class="body body--ligth body--dark">
+    <header class="header">
+      <div class="nombre">
+        <h1 class="header__h1">Luis Solano</h1>
+        <h2 class="header__h2">Desarrollador web Full Stack</h2>
+      </div>
+      <div class="div--contact">
+        <a href="contactMe" class="div__a raise">
+          Contactame
+          <span class="material-symbols-outlined"> arrow_forward_ios </span>
+        </a>
+        <a class="div__a raise" download href="./assets/cv/cv_es.png">Descargar</a>
+      </div>
+      <div class="lamp">
+        <div class="lava">
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+          <div class="blob"></div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
-
-<!-- metologia BEM
-
-B:BLOQUE
-E:ELEMENTO
-M:MODIFICADOR
-
--->
