No more comments

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio - Luis Fernando Solano Mejía</title>
     <link rel="shortcut icon" href="./assets/img/portafolio.png" type="image/x-icon" />
-
-    <!-- stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/nav.css">
@@ -17,38 +15,26 @@
     <link rel="stylesheet" href="./assets/css/projects.css">
     <link rel="stylesheet" href="./assets/css/reviews.css">
     <link rel="stylesheet" href="./assets/css/form.css">
-
     <meta name="author" content="Luis Solano" />
     <meta name="description" content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js" />
     <meta name="keywords" content="Full Stack Developer, Desarrollador Full Stack,JavaScript, CSS,HTML, REACT,GIT, Node.js, Express, SQL, Postgres, programodor con experiencia, web Developer" />
-
-    <!-- Open Grap Protocol ( OGP) , es un conjunnto de etiquetas que nos permiten controlar mejor como compartimos nuestras paginas en redes sociales -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Luis Solano. Full Stack Web Developer" />
     <meta property="og:description" content="Desarrollador Full Stack, especializado en construcción de interfaces de usuarios con React y creación de API Rest con Node.js #FullStackDevelopers #DesarrolladorWeb #developers" />
     <meta property="og:url" content="URL_DEL_PORTAFOLIO" />
     <meta property="og:image" content="URL_DE_LA_IMAGEN" />
-
-    <!-- font family -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
-    <!-- icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
-    <!-- soporte propiedades y etiquetas que aun el navegador no lo soporta -->
     <script src="https://flackr.github.io/scroll-timeline/dist/scroll-timeline.js"></script>
-
-    <!-- EmailJS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
-      emailjs.init('3OMyc8ggeZyT7YRAY')
+      emailjs.init('3OMyc8ggeZyT7YRAY');
     </script>
   </head>
   <body class="body body--ligth body--dark">
@@ -66,7 +52,6 @@
             </span>
           </li>
           <li class='nav__li' id="toggleModeBtn"><span id="modeText" class=" material-symbols-outlined">
-              <!-- dark_mode -->
               light_mode
             </span></li>
         </ul>
@@ -131,7 +116,6 @@
           ¡Hola! Soy Luis Fernando Solano Mejía, un apasionado por la programación web. Me enfoco principalmente en soluciones eficientes y atractivas para el usuario.
           Lo que más me caracteriza es mi gran adaptabilidad a diversos entornos de trabajo y mi capacidad para abrazar con entusiasmo las nuevas tecnologías emergentes en el mercado.
         </p>
-
         <section id="values">
           <ul class="values__ul--left">
             <li class="section__li">
@@ -195,49 +179,41 @@
       <section id="technologies" class="section">
         <h2 class="section__h2" data-translate-en="Technologies" data-translate-es="Tecnologías">Tecnologías</h2>
         <div class="tech-cards">
-          <!-- HTML Card -->
           <article class="tech-card">
             <span class="tech-card__front" data-tech="html">HTML</span>
             <span class="tech-card__back" data-translate-en="Experience: 1 year" data-translate-es="Experiencia: 1 año">
               Experiencia: 1 año</span>
           </article>
-          <!-- CSS Card -->
           <article class="tech-card">
             <span class="tech-card__front" data-tech="css">CSS</span>
             <span class="tech-card__back" data-translate-en="Experience: 1 year" data-translate-es="Experiencia: 1 año">
               Experiencia: 1 año</span>
           </article>
-          <!-- JavaScript Card -->
           <article class="tech-card">
             <span class="tech-card__front" data-tech="javascript">JavaScript</span>
             <span class="tech-card__back" data-translate-en="Experience: 1 year" data-translate-es="Experiencia: 1 año">
               Experiencia: 1 año</span>
           </article>
-          <!-- Git Card -->
           <article class="tech-card">
             <span class="tech-card__front" data-tech="git">Git</span>
             <span class="tech-card__back" data-translate-en="Experience: 1 year" data-translate-es="Experiencia: 1 año">
               Experiencia: 1 año</span>
           </article>
-          <!-- React Card -->
           <article class="tech-card">
             <span class="tech-card__front" data-tech="react">React</span>
             <span class="tech-card__back" data-translate-en="Experience: 1 year" data-translate-es="Experiencia: 1 año">
               Experiencia: 1 año</span>
           </article>
-          <!-- Node.js Card -->
           <article class="tech-card">
             <span class="tech-card__front" data-tech="node">Node.js</span>
             <span class="tech-card__back" data-translate-en="Experience: 1 year" data-translate-es="Experiencia: 1 año">
               Experiencia: 1 año</span>
           </article>
-          <!-- Python Card -->
           <article class="tech-card">
             <span class="tech-card__front" data-tech="python">Python</span>
             <span class="tech-card__back" data-translate-en="Experience: 1 year" data-translate-es="Experiencia: 1 año">
               Experiencia: 1 año</span>
           </article>
-          <!-- Vue Card -->
           <article class="tech-card">
             <span class="tech-card__front" data-tech="vue">Vue</span>
             <span class="tech-card__back" data-translate-en="Experience: 1 year" data-translate-es="Experiencia: 1 año">
@@ -253,7 +229,6 @@
             <i class='bx bx-left-arrow-alt'></i>
           </button>
           <ul class='article__ul' id="conteiner_projects">
-            <!-- aqui se insertaran los li -->
           </ul>
           <button class="article__button rigth">
             <i class='bx bx-right-arrow-alt'></i>
@@ -264,7 +239,6 @@
       <section id="reviews" class="section section--reviws ">
         <h2 data-translate-en="Reviews" data-translate-es="Reseñas" class="section__h2">Reseñas</h2>
         <ul class="ul--review" id="reviews-list">
-          <!-- aqui insertaremos los li -->
         </ul>
       </section>
 
@@ -310,14 +284,12 @@
             Desarrollador Full-stack comprometido con el aprendizaje constante y la aplicación de tecnologías modernas para abordar desafíos complejos con soluciones innovadoras.
           </p>
         </div>
-
         <div class="footer__right">
           <a href="www.linkedin.com/in/luis-fernando-solano-mejía-a9658a235" target="_blank" class="footer__social-icon footer__social-icon--linkedin">
             <i class="bx bxl-linkedin"></i>
           </a>
         </div>
       </div>
-
       <div class="footer__copy">
         <div class="footer__icon"><i class="bx bx-map"></i></div>
         <p class="footer__location" data-translate-en="Veracruz, México" data-translate-es="Veracruz, México">Veracruz, México</p>
